--- a/website/explainer/templates/explainer/explanation.html
+++ b/website/explainer/templates/explainer/explanation.html
@@ -1,96 +1,67 @@
 {% load static %}
 
+
+
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <!--      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
-<!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
-<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
-<!--    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
-<!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
+   <script>{{ bundle_js|safe }}</script>
 </head>
 
 <div class="container">
+	<div class="row">
+		<div class="col-md-12">
 
-    <div class="container">
   <div class="jumbotron">
     <h1>256 Final Demo</h1>
     <p>Created by Triple Xu</p>
   </div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+			<form method="post" action="{% url 'index' %}">
+        {% csrf_token %}
+      <label for="comment">Comment:</label>
+      <textarea  type="text" class="form-control" rows="5" id="comment" name="name" ></textarea>
+        <input type="submit" value="submit"><br>
+    </form>
+		</div>
+		<div class="col-md-8">
+			<div class="row">
+                <div id="figure3" class="lime top_div col-md-8">F3</div>
+			</div>
+			<div class="row">
+                <div id="figure1" class="lime top_div col-md-4">F1</div>
+                <div id="figure2" class="lime top_div col-md-4">F2</div>
+			</div>
+		</div>
+	</div>
 </div>
+    </div>
 
-<!--<div class="well"></div>-->
+<!--<div class="container">-->
 
-<!--    <div><b class="bg-success">High-lighted</b> <b class="bg-danger text-white">text</b></div>-->
-<!--<p class="bg-primary text-white">This text is important.</p>-->
-<!--  <p class="bg-success text-white">This text indicates success.</p>-->
-<!--  <p class="bg-info text-white">This text represents some information.</p>-->
-<!--  <p class="bg-warning text-white">This text represents a warning.</p>-->
-<!--  <p class="bg-danger text-white">This text represents danger.</p>-->
-<!--  <p class="bg-secondary text-white">Secondary background color.</p>-->
-<!--  <p class="bg-dark text-white">Dark grey background color.</p>-->
-<!--  <p class="bg-light text-dark">Light grey background color.</p>-->
-
-
-<!--<div class="dropdown">-->
-<!--  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example-->
-<!--  <span class="caret"></span></button>-->
-<!--  <ul class="dropdown-menu">-->
-<!--    <li><a href="#">HTML</a></li>-->
-<!--    <li><a href="#">CSS</a></li>-->
-<!--    <li><a href="#">JavaScript</a></li>-->
-<!--  </ul>-->
+<!--    <div class="container">-->
+<!--  <div class="jumbotron">-->
+<!--    <h1>256 Final Demo</h1>-->
+<!--    <p>Created by Triple Xu</p>-->
+<!--  </div>-->
 <!--</div>-->
 
-<!--<label for="customRange1">Basic range</label>-->
-<!--<input type="range" class="custom-range" id="customRange1">-->
-<!--<label class="mt-3" for="customRange3">Range with steps</label>-->
-<!--<input type="range" class="custom-range" min="0" max="5" step="0.5" id="customRange3">-->
+<!--    <form method="post" action="{% url 'index' %}">-->
+<!--        {% csrf_token %}-->
+<!--      <label for="comment">Comment:</label>-->
+<!--      <textarea  type="text" class="form-control" rows="5" id="comment" name="name" ></textarea>-->
+<!--        <input type="submit" value="submit"><br>-->
+<!--    </form>-->
 
-<!--<button type="submit" class="btn">Basic</button>-->
-<!--<button type="submit" class="btn btn-default">Default</button>-->
-<!--<button type="submit" class="btn btn-primary">Primary</button>-->
-<!--<button type="submit" class="btn btn-success">Success</button>-->
-<!--<button type="submit" class="btn btn-info">Info</button>-->
-<!--<button type="submit" class="btn btn-warning">Warning</button>-->
-<!--<button type="submit" class="btn btn-danger">Danger</button>-->
-<!--<button type="submit" class="btn btn-link">Link</button>-->
+<!--    -->
 
-
-<!--    <form class="form-inline" action="/action_page.php">-->
-<!--  <div class="form-group">-->
-<!--    <label class="sr-only" for="email">Email address:</label>-->
-<!--    <input type="email" class="form-control" id="email">-->
-<!--  </div>-->
-<!--  <div class="form-group">-->
-<!--    <label class="sr-only" for="pwd">Password:</label>-->
-<!--    <input type="password" class="form-control" id="pwd">-->
-<!--  </div>-->
-<!--  <div class="checkbox">-->
-<!--    <label><input type="checkbox"> Remember me</label>-->
-<!--  </div>-->
-<!--  <button type="submit" class="btn btn-default">Submit</button>-->
-<!--</form>-->
-
-<!--  <p>Use the contextual background classes to provide "meaning through colors":</p>-->
-<!--  <p class="bg-primary">This text is important.</p>-->
-<!--  <p class="bg-success">This text indicates success.</p>-->
-<!--  <p class="bg-info">This text represents some information.</p>-->
-<!--  <p class="bg-warning">This text represents a warning.</p>-->
-<!--  <p class="bg-danger">This text represents danger.</p>-->
-
-<form action="/your-name/" method="post">
-    <label for="your_name">Your name: </label>
-    <input id="your_name" type="text" name="your_name" value="{{ current_name }}">
-    <input type="submit" value="OK">
-</form>
-
-<!--<div class="form-group">-->
-<!--  <label for="comment">Comment:</label>-->
-<!--  <textarea class="form-control" rows="5" id="comment"></textarea>-->
 <!--</div>-->
 
-</div>
+<!--<div id="figure1"  class="lime top_div">F1</div>-->
+<!--    <div id="figure2"  class="lime top_div">F2</div>-->
+<!--    <div id="figure3"  class="lime top_div">F3</div>-->
+<script>{{ out|safe }}</script>
