--- a/website/explainer/templates/explainer/index.html
+++ b/website/explainer/templates/explainer/index.html
@@ -31,15 +31,32 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						});
 					});
 				</script>
+	<script>{{ bundle_js|safe }}</script>
+	<style>
+        .lime.text_div {
+            overflow:auto;
+        }
+    </style>
+
+	<style>
+		.transbox{
+			background-color: #FFFFFF;
+			background: rgba( 255, 255, 255, 0.2);
+		}
+	</style>
 
 	<style type="text/css">
-	footer{position:absolute;bottom:0;width:100%;height:100px;}
+	footer{width:100%;height:100px;}
 	.jumbotron {
 	  margin-bottom: 0px;
 	  height: 350px;
 	  color: white;
+
 	  text-shadow: black 0.3em 0.3em 0.3em;
+
 	  background:transparent;
+
+
 	}
 	</style>
 
@@ -57,19 +74,53 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<br>
     <p>Created by Triple X</p>
   	</div>
-
-	<div style="width: 30%;float: left;">
-		<form action="#" method="post">
+	<table width="800" border="0" cellpadding="10">
+	 <tr>
+	  <td width="30%" align="center">
+		  <form action="#" method="post">
+			{% csrf_token %}
 							<textarea  name="text" placeholder="Text..." required=""></textarea>
 							<input type="submit" value="Explain"/>
-						</form>
-	</div>
+		</form>
+	  </td>
+	  <td width="70%"align="center">
+		  <div class = "transbox" id="figure3" class="lime top_div col-md-8" style = "color: white"></div>
+	  </td>
+	 </tr>
+	 <tr>
+	  <td width="30%" align="center">
+		  <div id="figure1" class="lime top_div col-md-4"></div>
+	  </td>
+	  <td width="70%" align="center">
+		  <div id="figure2" class="lime top_div col-md-4"></div>
+	  </td>
+	 </tr>
+<!--	  <td colspan="2" align="center">-->
+<!--		<script src="{% static 'explainer/js/easyResponsiveTabs.js' %}" type="text/javascript"></script>-->
+<!--	  </td>-->
+<!--	 </tr>-->
+	</table>
+<!--	<div style="width: 30%;float: left;">-->
+<!--		<form action="#" method="post">-->
+<!--			{% csrf_token %}-->
+<!--							<textarea  name="text" placeholder="Text..." required=""></textarea>-->
+<!--							<input type="submit" value="Explain"/>-->
+<!--		</form>-->
+<!--		<div id="figure11" class="lime top_div col-md-4"></div>-->
+<!--	</div>-->
 
-	<div style="width: 70%;float: left;">
-		<textarea  name="highlight_explaination" placeholder="Explaination..." required=""></textarea>
-	</div>
-
+<!--	<div style="width: 70%;float: left;">-->
+<!--&lt;!&ndash;		<textarea  name="highlight_explaination" placeholder="Explaination..." required=""></textarea>&ndash;&gt;-->
+<!--		<div class="row">-->
+<!--                <div id="figure33" class="lime top_div col-md-8"></div>-->
+<!--			</div>-->
+<!--		<div class="row">-->
+<!--                <div id="figure22" class="lime top_div col-md-4"></div>-->
+<!--			</div>-->
+<!--	</div>-->
 </div>
+
+
 
 <footer>
 <div class="footer">
@@ -77,4 +128,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
 <script src="{% static 'explainer/js/easyResponsiveTabs.js' %}" type="text/javascript"></script>
 </footer>
+
+
 </body>
+
+<script>{{ out|safe }}</script>
+
