--- a/website/explainer/templates/explainer/index.html
+++ b/website/explainer/templates/explainer/index.html
@@ -22,6 +22,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<script src="{% static 'explainer/js/jquery.min.js' %}"></script>
+	<script src="{% static 'explainer/js/bundle.js' %}"></script>
 				<script type="text/javascript">
 					$(document).ready(function () {
 						$('#horizontalTab').easyResponsiveTabs({
@@ -31,7 +32,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						});
 					});
 				</script>
-	<script>{{ bundle_js|safe }}</script>
+
 	<style>
         .lime.text_div {
             overflow:auto;
@@ -43,29 +44,35 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			background-color: #FFFFFF;
 			background: rgba( 255, 255, 255, 0.2);
 		}
+
+		.testDiv{
+			bottom: 36px;
+			height: 350px;
+			resize: none;
+			color: black;
+			background-color: #FFFFFF
+		}
+
+		td{
+			vertical-align: top;
+		}
 	</style>
 
 	<style type="text/css">
-	footer{width:100%;height:100px;}
-	.jumbotron {
-	  margin-bottom: 0px;
-	  height: 350px;
-	  color: white;
+		footer{width:100%;height:100px;}
 
-	  text-shadow: black 0.3em 0.3em 0.3em;
-
-	  background:transparent;
-
-
-	}
+		.jumbotron {
+		  margin-bottom: 0px;
+		  height: 350px;
+		  color: white;
+		  text-shadow: black 0.3em 0.3em 0.3em;
+		  background:transparent;
+		}
 	</style>
 
 </head>
 
 <body>
-	<div id="header" >
-		256 NLP
-	</div>
 
 	<div class="container">
 
@@ -74,17 +81,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<br>
     <p>Created by Triple X</p>
   	</div>
-	<table width="800" border="0" cellpadding="10">
+	<table width="1200" border="0" cellpadding="10">
 	 <tr>
 	  <td width="30%" align="center">
 		  <form action="#" method="post">
 			{% csrf_token %}
-							<textarea  name="text" placeholder="Text..." required=""></textarea>
-							<input type="submit" value="Explain"/>
+			<textarea  name="text" placeholder="Text..." required=""></textarea>
+			<input type="submit" value="Explain"/>
 		</form>
 	  </td>
 	  <td width="70%"align="center">
-		  <div class = "transbox" id="figure3" class="lime top_div col-md-8" style = "color: white"></div>
+		  <div class='testDiv' id="figure3" class="lime top_div col-md-8" style="height:100px"></div>
 	  </td>
 	 </tr>
 	 <tr>
