--- a/website/explainer/templates/explainer/index.html
+++ b/website/explainer/templates/explainer/index.html
@@ -11,35 +11,41 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
 	<title>Simple Tab Forms A Flat Responsive Widget Template  :: w3layouts</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
 	<link href="{% static 'explainer/css/style.css' %}" rel='stylesheet' type='text/css'/>
-		<link href="//fonts.googleapis.com/css?family=Ropa+Sans:400,400i&amp;subset=latin-ext" rel="stylesheet">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="keywords" content="Simple Tab Forms Widget Responsive, Login Form Web Template, Flat Pricing Tables, Flat Drop-Downs, Sign-Up Web Templates, Flat Web Templates, Login Sign-up Responsive Web Template, Smartphone Compatible Web Template, Free Web Designs for Nokia, Samsung, LG, Sony Ericsson, Motorola Web Design" />
-		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<link href="//fonts.googleapis.com/css?family=Ropa+Sans:400,400i&amp;subset=latin-ext" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="keywords" content="Simple Tab Forms Widget Responsive, Login Form Web Template, Flat Pricing Tables, Flat Drop-Downs, Sign-Up Web Templates, Flat Web Templates, Login Sign-up Responsive Web Template, Smartphone Compatible Web Template, Free Web Designs for Nokia, Samsung, LG, Sony Ericsson, Motorola Web Design" />
+	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<script src="{% static 'explainer/js/jquery.min.js' %}"></script>
 	<script src="{% static 'explainer/js/bundle.js' %}"></script>
-				<script type="text/javascript">
-					$(document).ready(function () {
-						$('#horizontalTab').easyResponsiveTabs({
-							type: 'default', //Types: default, vertical, accordion           
-							width: 'auto', //auto or any width like 600px
-							fit: true   // 100% fit in a container
-						});
-					});
-				</script>
+	<script type="text/javascript">
+		$(document).ready(function () {
+			$('#horizontalTab').easyResponsiveTabs({
+				type: 'default', //Types: default, vertical, accordion
+				width: 'auto', //auto or any width like 600px
+				fit: true   // 100% fit in a container
+			});
+		});
+	</script>
+	<script src="{% static 'explainer/js/Chart.min.js' %}"></script>
+	<script src="{% static 'explainer/js/utils.js' %}"></script>
+	<style>
+	canvas {
+		-moz-user-select: none;
+		-webkit-user-select: none;
+		-ms-user-select: none;
+	}
+	</style>
 
 	<style>
         .lime.text_div {
             overflow:auto;
         }
-    </style>
 
-	<style>
 		.transbox{
 			background-color: #FFFFFF;
 			background: rgba( 255, 255, 255, 0.2);
@@ -82,6 +88,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <p>Created by Triple X</p>
   	</div>
 	<table width="1200" border="0" cellpadding="10">
+
 	 <tr>
 	  <td width="30%" align="center">
 		  <form action="#" method="post">
@@ -89,19 +96,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<textarea  name="text" placeholder="Text..." required=""></textarea>
 			<input type="submit" value="Explain"/>
 		</form>
+		  <br>
+		  <br>
+		  <div id="figure1" class="lime top_div col-md-4"></div>
 	  </td>
 	  <td width="70%"align="center">
 		  <div class='testDiv' id="figure3" class="lime top_div col-md-8" style="height:100px"></div>
+		  <br>
+		  <br>
+	    <div id="container">
+			<canvas id="word_exp" style="background-color: #FFFFFF"></canvas>
+		</div>
 	  </td>
-	 </tr>
-	 <tr>
-	  <td width="30%" align="center">
-		  <div id="figure1" class="lime top_div col-md-4"></div>
-	  </td>
-	  <td width="70%" align="center">
-		  <div id="figure2" class="lime top_div col-md-4"></div>
-	  </td>
-	 </tr>
+	  </tr>
+
+<!--	  <tr>-->
+<!--	  <td width="30%" align="center">-->
+<!--		  <div id="figure1" class="lime top_div col-md-4"></div>-->
+<!--	  </td>-->
+<!--	  <td width="70%" align="center">-->
+<!--		  <div id="figure2" class="lime top_div col-md-4"></div>-->
+<!--	  </td>-->
+<!--	 </tr>-->
 <!--	  <td colspan="2" align="center">-->
 <!--		<script src="{% static 'explainer/js/easyResponsiveTabs.js' %}" type="text/javascript"></script>-->
 <!--	  </td>-->
@@ -138,6 +154,29 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 
 </body>
+
+<script>
+		var barChartData = {{ my_data|safe }};
+		window.onload = function() {
+			var ctx = $('#word_exp')[0].getContext('2d');
+			ctx.font = 'bold 48px serif';
+			window.myBar = new Chart(ctx, {
+				type: 'bar',
+				data: barChartData,
+				options: {
+					responsive: true,
+					legend: {
+						position: 'top',
+					},
+					title: {
+						display: true,
+						text: 'Per-word confidence of prediction'
+					}
+				}
+			});
+
+		};
+</script>
 
 <script>{{ out|safe }}</script>
 
