--- a/website/explainer/templates/explainer/index.html
+++ b/website/explainer/templates/explainer/index.html
@@ -12,6 +12,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<title>Simple Tab Forms A Flat Responsive Widget Template  :: w3layouts</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link href="{% static 'explainer/css/style.css' %}" rel='stylesheet' type='text/css'/>
+	<link href="{% static 'explainer/css/rangeslider.css' %}" rel='stylesheet' type='text/css'/>
 	<link href="//fonts.googleapis.com/css?family=Ropa+Sans:400,400i&amp;subset=latin-ext" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -22,6 +23,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<script src="{% static 'explainer/js/jquery.min.js' %}"></script>
 	<script src="{% static 'explainer/js/bundle.js' %}"></script>
+	<script src="{% static 'explainer/js/rangeslider.min.js' %}"></script>
 	<script type="text/javascript">
 		$(document).ready(function () {
 			$('#horizontalTab').easyResponsiveTabs({
@@ -33,6 +35,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</script>
 	<script src="{% static 'explainer/js/Chart.min.js' %}"></script>
 	<script src="{% static 'explainer/js/utils.js' %}"></script>
+	<script src="{% static 'explainer/js/bootstrap-input-spinner.js' %}"></script>
+	<script>
+		$("input[type='number']").inputSpinner()
+	</script>
+
 	<style>
 	canvas {
 		-moz-user-select: none;
@@ -64,6 +71,44 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		}
 	</style>
 
+    <style>
+        .spinner {
+          width: 250px;
+        }
+        .spinner input {
+          text-align: center;
+        }
+        .input-group-btn-vertical {
+          position: relative;
+          white-space: nowrap;
+          width: 1%;
+          vertical-align: middle;
+          display: table-cell;
+        }
+        .input-group-btn-vertical > .btn {
+          display: block;
+          float: none;
+          width: 100%;
+          max-width: 100%;
+          padding: 11.25px;
+          margin-left: -1px;
+          position: relative;
+          border-radius: 0;
+        }
+        .input-group-btn-vertical > .btn:first-child {
+          border-top-right-radius: 4px;
+        }
+        .input-group-btn-vertical > .btn:last-child {
+          margin-top: -2px;
+          border-bottom-right-radius: 4px;
+        }
+        .input-group-btn-vertical i{
+          position: absolute;
+          top: 0;
+          left: 4px;
+        }
+    </style>
+
 	<style type="text/css">
 		footer{width:100%;height:100px;}
 
@@ -76,6 +121,50 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		}
 	</style>
 
+    <style>
+        .slidecontainer {
+          width: 100%;
+        }
+
+        .slider {
+          -webkit-appearance: none;
+          width: 72%;
+          height: 7px;
+          border-radius: 5px;
+          background: #d3d3d3;
+          outline: none;
+          opacity: 0.7;
+          -webkit-transition: .2s;
+          transition: opacity .2s;
+        }
+
+        .slider:hover {
+          opacity: 1;
+        }
+
+        .slider::-webkit-slider-thumb {
+          -webkit-appearance: none;
+          appearance: none;
+          width: 15px;
+          height: 15px;
+          border-radius: 50%;
+          background: #5CBBFF;
+          cursor: pointer;
+        }
+
+        .slider::-moz-range-thumb {
+          width: 15px;
+          height: 15px;
+          border-radius: 50%;
+          background: #5CBBFF;
+          cursor: pointer;
+        }
+
+        label {
+        	font-size:30px;
+        }
+</style>
+
 </head>
 
 <body>
@@ -85,36 +174,83 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="jumbotron">
     <h1>Explainability of classification model</h1>
 		<br>
-    <p>Created by Triple X</p>
+		<br>
+    <p style="font-size:25px">Created by Triple X</p>
   	</div>
-	<table width="1200" border="0" cellpadding="10">
+	<table width="1200" border="20" cellpadding="10">
 
 	 <tr>
 	  <td width="30%" align="center">
-		  <form action="#" method="post">
+		  <form action="#" method="post" style="float:left">
 			{% csrf_token %}
-			<textarea  name="text" placeholder="Text..." required=""></textarea>
+			<textarea name="text" placeholder="Text..." required="" style="line-height:37px;padding:28px;width:300px">{{ test_sentence }}</textarea>
+			  <br>
+		      <br>
+			  <br>
+
+	    <label style="color:white">Top Level</label>
+			  <br>
+			  <br>
+	    <div class="input-group spinner">
+			<input type="text" class="form-control" name="top_labels" value="{{ top_labels_val }}" min="1" max="6" id="topLevelInput" size="32" style="font-size:22px">
+			<div class="input-group-btn-vertical">
+			  <button class="btn btn-default" type="button" style="background-color: #FFFFFF;" id="topLevelBtnUp"><i class="fa fa-caret-up"></i></button>
+			  <button class="btn btn-default" type="button" style="background-color: #FFFFFF;" id="topLevelBtnDown"><i class="fa fa-caret-down"></i></button>
+			</div>
+	    </div>
+			  <br>
+			  <br>
+			  <br>
+		      <br>
+
+		  <label style="color:white">Number of Features</label>
+			  <br>
+			  <br>
+          <div class="input-group spinner">
+            <input type="text" class="form-control" name="num_features" value="{{ num_features_val }}" id="numFeatInput" min="1" max="20" style="font-size:22px">
+            <div class="input-group-btn-vertical">
+              <button class="btn btn-default" type="button" style="background-color: #FFFFFF;" id="numFeatUp"><i class="fa fa-caret-up"></i></button>
+              <button class="btn btn-default" type="button" style="background-color: #FFFFFF;" id="numFeatDown"><i class="fa fa-caret-down"></i></button>
+            </div>
+          </div>
+			  <br>
+			  <br>
+			  <br>
+			  <br>
+
+		  <label style="color:white;font">Number of Sample</label>
+			  <br>
+			  <br>
+          <div class="slidecontainer">
+              <input type="range" min="1000" max="5000" value="{{ num_samples_val }}" class="slider" id="myRange" name="num_samples">
+			  <br>
+			  <br>
+              <p style="color:white;font-size:22px">Value: <span id="demo" value="{{ num_samples_val }}"></span></p>
+          </div>
+
 			<input type="submit" value="Explain"/>
-		</form>
+		  </form>
 		  <br>
 		  <br>
 		  <div id="figure1" class="lime top_div col-md-4"></div>
 	  </td>
 
 	  <td width="70%"align="center">
-		  <div class='testDiv' id="figure3" class="lime top_div col-md-8" style="height:100px"></div>
+		  <div class='testDiv' id="figure3" class="lime top_div col-md-8" style="border-radius: 5px; margin-left: 40px;"></div>
 		  <br>
 		  <br>
 
-	    <div>
-			<canvas id="word_conf_exp" style="background-color: #FFFFFF; border-radius: 5px;"></canvas>
-		</div>
+<!--	    <div style="margin:20px;">-->
+		  <label style="color:white;margin-top: 90px;margin-bottom: 40px;">Per-word Confidence of Prediction</label>
+			<canvas id="word_conf_exp" style="background-color: #FFFFFF; border-radius: 5px; margin-left: 40px;"></canvas>
+<!--		</div>-->
 	    <br>
 	    <br>
 
-		<div>
-			<canvas id="class_conf_exp" style="background-color: #FFFFFF; border-radius: 5px;"></canvas>
-		</div>
+<!--		<div style="margin:20px;">-->
+		    <label style="color:white;margin-top: 90px;margin-bottom: 40px;">Per-class Confidence of Prediction</label>
+			<canvas id="class_conf_exp" style="background-color: #FFFFFF; border-radius: 5px; margin-left: 40px;"></canvas>
+<!--		</div>-->
 
 	  </td>
 	 </tr>
@@ -124,10 +260,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
 
 
-
+<br>
+<br>
+<br>
+<br>
 <footer>
-<div class="footer">
-	<p> &copy; 2019 Shane Tsui. All Rights Reserved </p>
+<div class="footer" >
+	<p style="font-size:22px"> &copy; 2019 Shane Tsui. All Rights Reserved </p>
 </div>
 <script src="{% static 'explainer/js/easyResponsiveTabs.js' %}" type="text/javascript"></script>
 </footer>
@@ -148,8 +287,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					position: 'top',
 				},
 				title: {
-					display: true,
-					text: 'Per-word confidence of prediction'
+					display: false,
 				}
 			}
 		});
@@ -171,15 +309,115 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					position: 'right',
 				},
 				title: {
-					display: true,
-					text: 'Chart.js Horizontal Bar Chart'
+					display: false,
 				}
 			}
 		});
-
 	};
 
+</script>
 
+<script>
+    (function ($) {
+      $("#topLevelBtnUp").on('click', function() {
+      	var new_value = parseInt($("#topLevelInput").val(), 10) + 1;
+      	var maximum_val = parseInt($("#topLevelInput").attr("max"), 10);
+      	var minimum_val = parseInt($("#topLevelInput").attr("min"), 10);
+      	if (new_value >= minimum_val && new_value <= maximum_val) {
+      		$("#topLevelInput").val(new_value);
+      	} else if(new_value < minimum_val) {
+      		$("#topLevelInput").val(minimum_val);
+      	} else {
+      		$("#topLevelInput").val(maximum_val);
+      	}
+      });
+      $("#topLevelBtnDown").on('click', function() {
+        var new_value = parseInt($('#topLevelInput').val(), 10) - 1;
+      	var maximum_val = parseInt($("#topLevelInput").attr("max"), 10);
+      	var minimum_val = parseInt($("#topLevelInput").attr("min"), 10);
+      	if (new_value >= minimum_val && new_value <= maximum_val) {
+      		$("#topLevelInput").val(new_value);
+      	} else if(new_value < minimum_val) {
+      		$("#topLevelInput").val(minimum_val);
+      	} else {
+      		$("#topLevelInput").val(maximum_val);
+      	}
+      });
+    })(jQuery);
+
+    (function ($) {
+      $('#numFeatUp').on('click', function() {
+
+        var new_value = parseInt($("#numFeatInput").val(), 10) + 1;
+      	var maximum_val = parseInt($("#numFeatInput").attr("max"), 10);
+      	var minimum_val = parseInt($("#numFeatInput").attr("min"), 10);
+      	if (new_value >= minimum_val && new_value <= maximum_val) {
+      		$("#numFeatInput").val(new_value);
+      	} else if(new_value < minimum_val) {
+      		$("#numFeatInput").val(minimum_val);
+      	} else {
+      		$("#numFeatInput").val(maximum_val);
+      	}
+      });
+      $('#numFeatDown').on('click', function() {
+        var new_value = parseInt($('#numFeatInput').val(), 10) - 1;
+      	var maximum_val = parseInt($("#numFeatInput").attr("max"), 10);
+      	var minimum_val = parseInt($("#numFeatInput").attr("min"), 10);
+      	if (new_value >= minimum_val && new_value <= maximum_val) {
+      		$("#numFeatInput").val(new_value);
+      	} else if(new_value < minimum_val) {
+      		$("#numFeatInput").val(minimum_val);
+      	} else {
+      		$("#numFeatInput").val(maximum_val);
+      	}
+      });
+    })(jQuery);
+</script>
+
+<script>
+	var slider = document.getElementById("myRange");
+	var output = document.getElementById("demo");
+	output.innerHTML = slider.value;
+
+	slider.oninput = function() {
+	  output.innerHTML = this.value;
+	}
+</script>
+
+<script>
+	$(document).ready(function() {
+		$("#topLevelInput").change(function() {
+		var maximum_val = parseInt($("#topLevelInput").attr("max"), 10);
+		var minimum_val = parseInt($("#topLevelInput").attr("min"), 10);
+		if (isNaN($("#topLevelInput").val())) {
+			$("#topLevelInput").val(minimum_val);
+			alert("Please input a valid number!");
+		} else {
+			var new_value = parseInt($("#topLevelInput").val(), 10);
+			if (new_value < minimum_val || new_value > maximum_val) {
+				$("#topLevelInput").val(minimum_val);
+				alert("Please input a number between " + minimum_val + " and " + maximum_val);
+			}
+		}
+		});
+	});
+
+	$(document).ready(function() {
+		$("#numFeatInput").change(function() {
+		var maximum_val = parseInt($("#numFeatInput").attr("max"), 10);
+		var minimum_val = parseInt($("#numFeatInput").attr("min"), 10);
+		if (isNaN($("#numFeatInput").val())) {
+			$("#numFeatInput").val(minimum_val);
+			alert("Please input a valid number!");
+		} else {
+			var new_value = parseInt($("#numFeatInput").val(), 10);
+			if (new_value < minimum_val || new_value > maximum_val) {
+				$("#numFeatInput").val(minimum_val);
+				alert("Please input a number between " + minimum_val + " and " + maximum_val);
+			}
+		}
+		});
+	});
 </script>
 
 <script>{{ out|safe }}</script>
