--- a/website/explainer/templates/explainer/lime_exp.html
+++ b/website/explainer/templates/explainer/lime_exp.html
@@ -172,7 +172,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="container">
 
 	<div class="jumbotron">
-    <h1>Explainability of classification model</h1>
+    <h1>Local Interpretable Model-agnostic Explanations</h1>
 		<br>
 		<br>
     <p style="font-size:25px">Created by Triple X</p>
