--- a/website/explainer/templates/explainer/hnatt_exp.html
+++ b/website/explainer/templates/explainer/hnatt_exp.html
@@ -172,7 +172,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="container">
 
 	<div class="jumbotron">
-    <h1>Explainability of classification model</h1>
+    <h1>Explainability of Hierarchical Network with Attention</h1>
 		<br>
 		<br>
     <p style="font-size:25px">Created by Triple X</p>
@@ -180,85 +180,46 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<table width="1200" border="20" cellpadding="10">
 
 	 <tr>
-	  <td width="30%" align="center">
+	<!--	  <td width="30%" align="center">-->
 		  <form action="#" method="post" style="float:left">
 			{% csrf_token %}
-			<textarea name="text" placeholder="Text..." required="" style="line-height:37px;padding:28px;width:300px">{{ test_sentence }}</textarea>
-			  <br>
-		      <br>
-			  <br>
-
-	    <label style="color:white">Top Level</label>
-			  <br>
-			  <br>
-	    <div class="input-group spinner">
-			<input type="text" class="form-control" name="top_labels" value="{{ top_labels_val }}" min="1" max="6" id="topLevelInput" size="32" style="font-size:22px">
-			<div class="input-group-btn-vertical">
-			  <button class="btn btn-default" type="button" style="background-color: #FFFFFF;" id="topLevelBtnUp"><i class="fa fa-caret-up"></i></button>
-			  <button class="btn btn-default" type="button" style="background-color: #FFFFFF;" id="topLevelBtnDown"><i class="fa fa-caret-down"></i></button>
-			</div>
-	    </div>
-			  <br>
-			  <br>
-			  <br>
-		      <br>
-
-		  <label style="color:white">Number of Features</label>
-			  <br>
-			  <br>
-          <div class="input-group spinner">
-            <input type="text" class="form-control" name="num_features" value="{{ num_features_val }}" id="numFeatInput" min="1" max="20" style="font-size:22px">
-            <div class="input-group-btn-vertical">
-              <button class="btn btn-default" type="button" style="background-color: #FFFFFF;" id="numFeatUp"><i class="fa fa-caret-up"></i></button>
-              <button class="btn btn-default" type="button" style="background-color: #FFFFFF;" id="numFeatDown"><i class="fa fa-caret-down"></i></button>
-            </div>
-          </div>
-			  <br>
-			  <br>
-			  <br>
-			  <br>
-
-		  <label style="color:white;font">Number of Sample</label>
-			  <br>
-			  <br>
-          <div class="slidecontainer">
-              <input type="range" min="1000" max="5000" value="{{ num_samples_val }}" class="slider" id="myRange" name="num_samples">
-			  <br>
-			  <br>
-              <p style="color:white;font-size:22px">Value: <span id="demo" value="{{ num_samples_val }}"></span></p>
-          </div>
+			<textarea name="text" placeholder="Text..." required="" style="line-height:37px;padding:28px;">{{ test_sentence }}</textarea>
 
 			<input type="submit" value="Explain"/>
 		  </form>
 		  <br>
 		  <br>
 		  <div id="figure1" class="lime top_div col-md-4"></div>
-	  </td>
+	<!--	  </td>-->
+	 </tr>
+	 <tr>
+<!--	  <td width="70%"align="center">-->
+		<label style="color:white;margin-top: 90px;margin-bottom: 40px;">Per-sentence Confidence of Prediction</label>
+		  <div class='testDiv' id="figure3" style="border-radius:5px;padding:30px;text-align:left;line-height:50px;">
+<!--			  <span style="background-color: rgb(148, 103, 189);margin=20px;font-size:40px;align:left;">text1 text1 text1 text1 text1</span>-->
+<!--			  <br>-->
+<!--			  <span style="background-color: rgb(0, 103, 189);margin=20px;font-size:40px;align:left;">text2 text2 text2 text2 text2</span>-->
+		  </div>
 
-	  <td width="70%"align="center">
-		  <div class='testDiv' id="figure3" class="lime top_div col-md-8" style="border-radius: 5px; margin-left: 40px;"></div>
 		  <br>
 		  <br>
 
 <!--	    <div style="margin:20px;">-->
 		  <label style="color:white;margin-top: 90px;margin-bottom: 40px;">Per-word Confidence of Prediction</label>
-			<canvas id="word_conf_exp" style="background-color: #FFFFFF; border-radius: 5px; margin-left: 40px;"></canvas>
+			<canvas id="word_conf_exp" style="background-color: #FFFFFF; border-radius: 5px;"></canvas>
 <!--		</div>-->
 	    <br>
 	    <br>
 
 <!--		<div style="margin:20px;">-->
 		    <label style="color:white;margin-top: 90px;margin-bottom: 40px;">Per-class Confidence of Prediction</label>
-			<canvas id="class_conf_exp" style="background-color: #FFFFFF; border-radius: 5px; margin-left: 40px;"></canvas>
+			<canvas id="class_conf_exp" style="background-color: #FFFFFF; border-radius: 5px;"></canvas>
 <!--		</div>-->
-
-	  </td>
-	 </tr>
-
+<!--	  </td>-->
+<!--	 </tr>-->
+		</tr>
 	</table>
-
-</div>
-
+	</div>
 
 <br>
 <br>
@@ -271,6 +232,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="{% static 'explainer/js/easyResponsiveTabs.js' %}" type="text/javascript"></script>
 </footer>
 </body>
+
+<script>
+	var sentenceProbabilities = {{ sentenceProbabilities|safe }};
+	$(document).ready(function() {
+		var sentence_div = d3.select('#figure3');
+		for(var key in sentenceProbabilities) {
+			var color = sentenceProbabilities[key];
+			sentence_div.append('span').style('background-color', color).style('margin', '20px').style('font-size', '35px').text(key);
+			sentence_div.append('br');
+		}
+	});
+</script>
 
 <script>
 	var wordConfBarChartData = {{ wordConfData|safe }};
@@ -314,111 +287,110 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			}
 		});
 	};
-
 </script>
 
-<script>
-    (function ($) {
-      $("#topLevelBtnUp").on('click', function() {
-      	var new_value = parseInt($("#topLevelInput").val(), 10) + 1;
-      	var maximum_val = parseInt($("#topLevelInput").attr("max"), 10);
-      	var minimum_val = parseInt($("#topLevelInput").attr("min"), 10);
-      	if (new_value >= minimum_val && new_value <= maximum_val) {
-      		$("#topLevelInput").val(new_value);
-      	} else if(new_value < minimum_val) {
-      		$("#topLevelInput").val(minimum_val);
-      	} else {
-      		$("#topLevelInput").val(maximum_val);
-      	}
-      });
-      $("#topLevelBtnDown").on('click', function() {
-        var new_value = parseInt($('#topLevelInput').val(), 10) - 1;
-      	var maximum_val = parseInt($("#topLevelInput").attr("max"), 10);
-      	var minimum_val = parseInt($("#topLevelInput").attr("min"), 10);
-      	if (new_value >= minimum_val && new_value <= maximum_val) {
-      		$("#topLevelInput").val(new_value);
-      	} else if(new_value < minimum_val) {
-      		$("#topLevelInput").val(minimum_val);
-      	} else {
-      		$("#topLevelInput").val(maximum_val);
-      	}
-      });
-    })(jQuery);
+<!--<script>-->
+<!--    (function ($) {-->
+<!--      $("#topLevelBtnUp").on('click', function() {-->
+<!--      	var new_value = parseInt($("#topLevelInput").val(), 10) + 1;-->
+<!--      	var maximum_val = parseInt($("#topLevelInput").attr("max"), 10);-->
+<!--      	var minimum_val = parseInt($("#topLevelInput").attr("min"), 10);-->
+<!--      	if (new_value >= minimum_val && new_value <= maximum_val) {-->
+<!--      		$("#topLevelInput").val(new_value);-->
+<!--      	} else if(new_value < minimum_val) {-->
+<!--      		$("#topLevelInput").val(minimum_val);-->
+<!--      	} else {-->
+<!--      		$("#topLevelInput").val(maximum_val);-->
+<!--      	}-->
+<!--      });-->
+<!--      $("#topLevelBtnDown").on('click', function() {-->
+<!--        var new_value = parseInt($('#topLevelInput').val(), 10) - 1;-->
+<!--      	var maximum_val = parseInt($("#topLevelInput").attr("max"), 10);-->
+<!--      	var minimum_val = parseInt($("#topLevelInput").attr("min"), 10);-->
+<!--      	if (new_value >= minimum_val && new_value <= maximum_val) {-->
+<!--      		$("#topLevelInput").val(new_value);-->
+<!--      	} else if(new_value < minimum_val) {-->
+<!--      		$("#topLevelInput").val(minimum_val);-->
+<!--      	} else {-->
+<!--      		$("#topLevelInput").val(maximum_val);-->
+<!--      	}-->
+<!--      });-->
+<!--    })(jQuery);-->
 
-    (function ($) {
-      $('#numFeatUp').on('click', function() {
+<!--    (function ($) {-->
+<!--      $('#numFeatUp').on('click', function() {-->
 
-        var new_value = parseInt($("#numFeatInput").val(), 10) + 1;
-      	var maximum_val = parseInt($("#numFeatInput").attr("max"), 10);
-      	var minimum_val = parseInt($("#numFeatInput").attr("min"), 10);
-      	if (new_value >= minimum_val && new_value <= maximum_val) {
-      		$("#numFeatInput").val(new_value);
-      	} else if(new_value < minimum_val) {
-      		$("#numFeatInput").val(minimum_val);
-      	} else {
-      		$("#numFeatInput").val(maximum_val);
-      	}
-      });
-      $('#numFeatDown').on('click', function() {
-        var new_value = parseInt($('#numFeatInput').val(), 10) - 1;
-      	var maximum_val = parseInt($("#numFeatInput").attr("max"), 10);
-      	var minimum_val = parseInt($("#numFeatInput").attr("min"), 10);
-      	if (new_value >= minimum_val && new_value <= maximum_val) {
-      		$("#numFeatInput").val(new_value);
-      	} else if(new_value < minimum_val) {
-      		$("#numFeatInput").val(minimum_val);
-      	} else {
-      		$("#numFeatInput").val(maximum_val);
-      	}
-      });
-    })(jQuery);
-</script>
+<!--        var new_value = parseInt($("#numFeatInput").val(), 10) + 1;-->
+<!--      	var maximum_val = parseInt($("#numFeatInput").attr("max"), 10);-->
+<!--      	var minimum_val = parseInt($("#numFeatInput").attr("min"), 10);-->
+<!--      	if (new_value >= minimum_val && new_value <= maximum_val) {-->
+<!--      		$("#numFeatInput").val(new_value);-->
+<!--      	} else if(new_value < minimum_val) {-->
+<!--      		$("#numFeatInput").val(minimum_val);-->
+<!--      	} else {-->
+<!--      		$("#numFeatInput").val(maximum_val);-->
+<!--      	}-->
+<!--      });-->
+<!--      $('#numFeatDown').on('click', function() {-->
+<!--        var new_value = parseInt($('#numFeatInput').val(), 10) - 1;-->
+<!--      	var maximum_val = parseInt($("#numFeatInput").attr("max"), 10);-->
+<!--      	var minimum_val = parseInt($("#numFeatInput").attr("min"), 10);-->
+<!--      	if (new_value >= minimum_val && new_value <= maximum_val) {-->
+<!--      		$("#numFeatInput").val(new_value);-->
+<!--      	} else if(new_value < minimum_val) {-->
+<!--      		$("#numFeatInput").val(minimum_val);-->
+<!--      	} else {-->
+<!--      		$("#numFeatInput").val(maximum_val);-->
+<!--      	}-->
+<!--      });-->
+<!--    })(jQuery);-->
+<!--</script>-->
 
-<script>
-	var slider = document.getElementById("myRange");
-	var output = document.getElementById("demo");
-	output.innerHTML = slider.value;
+<!--<script>-->
+<!--	var slider = document.getElementById("myRange");-->
+<!--	var output = document.getElementById("demo");-->
+<!--	output.innerHTML = slider.value;-->
 
-	slider.oninput = function() {
-	  output.innerHTML = this.value;
-	}
-</script>
+<!--	slider.oninput = function() {-->
+<!--	  output.innerHTML = this.value;-->
+<!--	}-->
+<!--</script>-->
 
-<script>
-	$(document).ready(function() {
-		$("#topLevelInput").change(function() {
-		var maximum_val = parseInt($("#topLevelInput").attr("max"), 10);
-		var minimum_val = parseInt($("#topLevelInput").attr("min"), 10);
-		if (isNaN($("#topLevelInput").val())) {
-			$("#topLevelInput").val(minimum_val);
-			alert("Please input a valid number!");
-		} else {
-			var new_value = parseInt($("#topLevelInput").val(), 10);
-			if (new_value < minimum_val || new_value > maximum_val) {
-				$("#topLevelInput").val(minimum_val);
-				alert("Please input a number between " + minimum_val + " and " + maximum_val);
-			}
-		}
-		});
-	});
+<!--<script>-->
+<!--	$(document).ready(function() {-->
+<!--		$("#topLevelInput").change(function() {-->
+<!--		var maximum_val = parseInt($("#topLevelInput").attr("max"), 10);-->
+<!--		var minimum_val = parseInt($("#topLevelInput").attr("min"), 10);-->
+<!--		if (isNaN($("#topLevelInput").val())) {-->
+<!--			$("#topLevelInput").val(minimum_val);-->
+<!--			alert("Please input a valid number!");-->
+<!--		} else {-->
+<!--			var new_value = parseInt($("#topLevelInput").val(), 10);-->
+<!--			if (new_value < minimum_val || new_value > maximum_val) {-->
+<!--				$("#topLevelInput").val(minimum_val);-->
+<!--				alert("Please input a number between " + minimum_val + " and " + maximum_val);-->
+<!--			}-->
+<!--		}-->
+<!--		});-->
+<!--	});-->
 
-	$(document).ready(function() {
-		$("#numFeatInput").change(function() {
-		var maximum_val = parseInt($("#numFeatInput").attr("max"), 10);
-		var minimum_val = parseInt($("#numFeatInput").attr("min"), 10);
-		if (isNaN($("#numFeatInput").val())) {
-			$("#numFeatInput").val(minimum_val);
-			alert("Please input a valid number!");
-		} else {
-			var new_value = parseInt($("#numFeatInput").val(), 10);
-			if (new_value < minimum_val || new_value > maximum_val) {
-				$("#numFeatInput").val(minimum_val);
-				alert("Please input a number between " + minimum_val + " and " + maximum_val);
-			}
-		}
-		});
-	});
-</script>
+<!--	$(document).ready(function() {-->
+<!--		$("#numFeatInput").change(function() {-->
+<!--		var maximum_val = parseInt($("#numFeatInput").attr("max"), 10);-->
+<!--		var minimum_val = parseInt($("#numFeatInput").attr("min"), 10);-->
+<!--		if (isNaN($("#numFeatInput").val())) {-->
+<!--			$("#numFeatInput").val(minimum_val);-->
+<!--			alert("Please input a valid number!");-->
+<!--		} else {-->
+<!--			var new_value = parseInt($("#numFeatInput").val(), 10);-->
+<!--			if (new_value < minimum_val || new_value > maximum_val) {-->
+<!--				$("#numFeatInput").val(minimum_val);-->
+<!--				alert("Please input a number between " + minimum_val + " and " + maximum_val);-->
+<!--			}-->
+<!--		}-->
+<!--		});-->
+<!--	});-->
+<!--</script>-->
 
 <!--<script>{{ out|safe }}</script>-->
 
